LIN-3289/LIN-4466 Add isFromClient check in selection listeners of TableSelectionAspectDefinition
Change-Id: Ifedbd9049076151584ae21613d7b8b1635ba6459